--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,8 @@ edition = "2018"
 anyhow = "1.0.38"
 argh = "0.1.4"
 chrono = "0.4.19"
+csv = "1.1.5"
 env_logger = "0.8.3"
-ureq = "2.0.1"
+miniserde = "0.1.13"
+ureq = "2.0"
+json = "0.12"
