--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 argh = "0.1.4"
-chrono = "0.4.19"
+chrono = { version ="0.4.19", features = ["serde"] }
 csv = "1.1.5"
 env_logger = "0.8.3"
-miniserde = "0.1.13"
-ureq = "2.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+ureq = { version = "2.0", features = ["json"] }
 json = "0.12"
+log = "0.4.14"
+either = "1.6.1"
