--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,14 @@ name = "polkadot-rewards"
 version = "0.3.0"
 authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
 edition = "2018"
-
+description = "Handy CLI for all your Polkadot ecosystem staking rewards needs."
+readme = "README.md"
+homepage = "https://github.com/insipx/polkadot-rewards"
+repository = "https://github.com/insipx/polkadot-rewards"
+license = "MIT"
+license-file = "LICENSE"
+keywords = ["cli" "polkadot" "moonriver" "kusama" "substrate" "staking" "rewards"]
+categories = ["command-line-utilities" "cryptography::cryptocurrencies" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
