--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -12,5 +12,7 @@ categories = ["api"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1", features = ["derive"] }
 ureq = { version = "2", features = ["json"] }
 
