--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -14,5 +14,6 @@ categories = ["api"]
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0.89"
 ureq = { version = "2", features = ["json"] }
 
