--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -17,3 +17,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.89"
 ureq = { version = "2", features = ["json"] }
 
+[dev-dependencies]
+assert_ok = "1"
