--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -15,7 +15,10 @@ categories = ["api"]
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.89"
+serde_repr = "0.1.9"
+serde-aux = "4.1.2"
 ureq = { version = "2", features = ["json"] }
+thiserror = "1.0.30"
 
 [dev-dependencies]
 assert_ok = "1"
