--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.89"
 serde_repr = "0.1.9"
 serde-aux = "4.1.2"
-ureq = { version = "2", features = ["json"] }
+hyper = "0.14"
 thiserror = "1.0.30"
 
 [dev-dependencies]
