--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -17,8 +17,11 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.89"
 serde_repr = "0.1.9"
 serde-aux = "4.1.2"
-hyper = "0.14"
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 thiserror = "1.0.30"
+envy = "0.4.2"
+once_cell = "1.16"
 
 [dev-dependencies]
 assert_ok = "1"
