--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0.89"
 serde_repr = "0.1.9"
 serde-aux = "4.1.2"
 hyper = { version = "0.14", features = ["full"] }
+hyper-tls = "0.5"
+http = "0.2.8"
 tokio = { version = "1", features = ["full"] }
 thiserror = "1.0.30"
 envy = "0.4.2"
