--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -24,6 +24,8 @@ tokio = { version = "1", features = ["full"] }
 thiserror = "1.0.30"
 envy = "0.4.2"
 once_cell = "1.16"
+derive_builder = "0.12.0"
+url = "2.3"
 
 [dev-dependencies]
 assert_ok = "1"
