--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["api"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.89"
@@ -23,9 +24,11 @@ http = "0.2.8"
 tokio = { version = "1", features = ["full"] }
 thiserror = "1.0.30"
 envy = "0.4.2"
-once_cell = "1.16"
 derive_builder = "0.12.0"
 url = "2.3"
+bytes = "1.3"
+once_cell = "1.16"
+futures = "0.3"
 
 [dev-dependencies]
 assert_ok = "1"
