--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -29,7 +29,10 @@ url = "2.3"
 bytes = "1.3"
 once_cell = "1.16"
 futures = "0.3"
+tracing = "0.1.37"
 
 [dev-dependencies]
 assert_ok = "1"
 tokio-test = "0.4"
+tracing-forest = "0.1.5"
+tracing-subscriber = "0.3.16"
