--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -34,5 +34,5 @@ tracing = "0.1.37"
 [dev-dependencies]
 assert_ok = "1"
 tokio-test = "0.4"
-tracing-forest = "0.1.5"
-tracing-subscriber = "0.3.16"
+tracing-forest = { version = "0.1.5", features = ["env-filter", "ansi", "chrono"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
