--- a/cryptowatch/Cargo.toml
+++ b/cryptowatch/Cargo.toml
@@ -33,6 +33,8 @@ tracing = "0.1.37"
 
 [dev-dependencies]
 assert_ok = "1"
-tokio-test = "0.4"
 tracing-forest = { version = "0.1.5", features = ["env-filter", "ansi", "chrono"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
+itertools = "0.10"
+enum-iterator = "1.2"
+tokio = { version = "1.23", default-features = false, features = ["sync", "rt", "macros"] }
